@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.missingmovies"
        name="Missing Movie Viewer"
-       version="2.1.3a"
+       version="2.1.3b"
        provider-name="Nathan Hoad">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
