@@ -1,3 +1,5 @@
+[B]2.1.3b[/B]
+- Fixed: Output the right missing list to the log (fixes crash when there is nothing missing)
 [B]2.1.3a[/B]
 - Fixed: Unicode error
 [B]2.1.3[/B]
